--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <span>Phone:</span><span>+91 9965555573</span>
                   </li>
                   <li class="d-flex">
-                    <span>Country:</span> <span>Indian</span>
+                    <span>Country:</span> <span>India</span>
                   </li>
                   <li class="d-flex"><span>City:</span><span>Coimbatore</span></li>
                 </ul>
