--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                   <span class="flaticon-medal"></span>
                 </div>
                 <div class="text pl-3">
-                  <h2>100% Attendance Award (Consistent Academic Year)</h2>
+                  <h2>100% Attendance Award (Academic Year 2023-2024)</h2>
                   
                   <span><strong>KGiSL Institute Of Technology</strong></span>
                   <p class="date">March 2025</p>
