--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                   <span class="flaticon-trophy"></span>
                 </div>
                 <div class="text pl-3">
-                  <h2>Finalist – AWS DeepRacer 48M Hrs Challenge</h2>
+                  <h2>Semi Finalist – AWS DeepRacer 48M Hrs Challenge</h2>
                   <span><strong>Amazon Web Services (AWS)</strong></span>
                   <p class="date">August 2024</p>
                   <p>Coimbatore - India</p>
