--- a/index.html
+++ b/index.html
@@ -391,6 +391,38 @@
               </div>
             </div>
             <div id="page-4" class="page four">
+              <h2 class="heading">Certifications</h2>
+              <div class="resume-wrap d-flex ftco-animate">
+                <div
+                  class="icon d-flex align-items-center justify-content-center"
+                >
+                  <span class="flaticon-medal"></span>
+                </div>
+                <div class="text pl-3">
+                  <h2>Oracle Certified Foundations Associate</h2>
+                  
+                  <span><strong>Oracle University</strong></span>
+                  <p class="date">May 2023</p>
+                  <p>Coimbatore - Inida</p>
+                </div>
+              </div>
+              <div class="resume-wrap d-flex ftco-animate">
+                <div
+                  class="icon d-flex align-items-center justify-content-center"
+                >
+                  <span class="flaticon-trophy"></span>
+                </div>
+                <div class="text pl-3">
+                  <h2>Linguaskill English Proficiency</h2>
+                  <span><strong>Cambridge University</strong></span>
+                  <p class="date">March 2024</p>
+                  <p>Coimbatore - India</p>
+                </div>
+              </div>
+            </div>
+
+
+          <div id="page-4" class="page four">
               <h2 class="heading">Awards</h2>
               <div class="resume-wrap d-flex ftco-animate">
                 <div
@@ -420,21 +452,6 @@
                 </div>
               </div>
             </div>
-            <div class="resume-wrap d-flex ftco-animate">
-                <div
-                  class="icon d-flex align-items-center justify-content-center"
-                >
-                  <span class="flaticon-trophy"></span>
-                </div>
-                <div class="text pl-3">
-                  <h2>Semi-Finalist – Smart India Hackathon (SIH)</h2>
-                  <span><strong>National-Level Innovation Challenge</strong></span>
-                  <p class="date">September 2023</p>
-                  <p>Coimbatore - India</p>
-                </div>
-              </div>
-          </div>
-        </div>
       </div>
     </section>
     
