--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
 
 
-          <div id="page-4" class="page four">
+          <div id="page-5" class="page five">
               <h2 class="heading">Awards</h2>
               <div class="resume-wrap d-flex ftco-animate">
                 <div
