--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
                 <p>
-                  <a href="file:///C:/Users/HP/Downloads/GAUTHAM%20A%20FINAL%20RESUME.pdf" class="btn btn-primary py-3 px-3">Download Resume</a>
+                  <a href="file:///C:/Users/HP/Downloads/GAUTHAM%20A%20RESUME%20(1).pdf" class="btn btn-primary py-3 px-3">Download Resume</a>
                 </p>
               </div>
             </div>
