--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                   
                   <span><strong>Oracle University</strong></span>
                   <p class="date">May 2023</p>
-                  <p>Coimbatore - Inida</p>
+                  <p>Coimbatore - India</p>
                 </div>
               </div>
               <div class="resume-wrap d-flex ftco-animate">
