--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                   
                   <span><strong>KGiSL Institute Of Technology</strong></span>
                   <p class="date">March 2025</p>
-                  <p>Coimbatore - Inida</p>
+                  <p>Coimbatore - India</p>
                 </div>
               </div>
               <div class="resume-wrap d-flex ftco-animate">
