--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
                 <p>
-                  <a href=""C:\Users\HP\Downloads\GAUTHAM A RESUME.pdf"" class="btn btn-primary py-3 px-3">Download Resume</a>
+                  <a href="C:\Users\HP\Downloads\GAUTHAM A RESUME.pdf" class="btn btn-primary py-3 px-3">Download Resume</a>
                 </p>
               </div>
             </div>
