--- a/index.html
+++ b/index.html
@@ -193,18 +193,19 @@
             <div id="page-3" class="page three">
               <h2 class="heading">Skills</h2>
               <div class="row mb-4 ftco-animate">
-                <div class="col"><img class="img-fluid grow" src="images/skills/javascript.png" title="JavaScript" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/node.png" title="NodeJS" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/react.png" title="React" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/html.png" title="HTML" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/css.png" title="CSS" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/bootstrap.png" title="Bootstrap" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/cplusplus.png" title="C++" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/c.png" title="C" /></div>
-                <div class="col"><img class="img-fluid grow" src="images/skills/java.png" title="Java" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/javascript.png" title="JavaScript" alt="JavaScript" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/node.png" title="NodeJS" alt="NodeJS" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/react.png" title="React" alt="React" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/html.png" title="HTML" alt="HTML" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/css.png" title="CSS" alt="CSS" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/bootstrap.png" title="Bootstrap" alt="Bootstrap" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/cplusplus.png" title="C++" alt="C++" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/c.png" title="C" alt="C" /></div>
+                <div class="col"><img class="img-fluid grow" src="images/skills/java.png" title="Java" alt="Java" /></div>
               </div>
             </div>
-            <div id="page-4" class="page four col-md-11 offset-md-1">
+            <!-- Certifications Section -->
+            <div id="page-4" class="page four col-md-12">
               <h2 class="heading">Certifications</h2>
               <div class="resume-wrap d-flex ftco-animate">
                 <div class="icon d-flex align-items-center justify-content-center">
@@ -229,7 +230,8 @@
                 </div>
               </div>
             </div>
-            <div id="page-5" class="page five col-md-11 offset-md-1">
+            <!-- Awards Section -->
+            <div id="page-5" class="page five col-md-12">
               <h2 class="heading">Awards</h2>
               <div class="resume-wrap d-flex ftco-animate">
                 <div class="icon d-flex align-items-center justify-content-center">
