--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
                 <p>
-                  <a href="https://drive.google.com/file/d/1RaYntaMOJVzGNRAC6ez2gNPiQefmsjtP/view?usp=sharing" class="btn btn-primary py-3 px-3">Download Resume</a>
+                  <a href="https://drive.google.com/file/d/1uBczUhi-U9JEdnAG9RnjWfihmDuMu5ZP/view" class="btn btn-primary py-3 px-3">Download Resume</a>
                 </p>
               </div>
             </div>
@@ -487,3 +487,4 @@
     </section>
   </body>
 </html>
+
