--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <li><a href="#page-2">Experience</a></li>
                 <li><a href="#page-3">Skills</a></li>
                 <li><a href="#page-4">Awards</a></li>
+                <li><a href="#page-5">Projects</a></li> 
               </ul>
             </nav>
           </div>
@@ -487,4 +488,3 @@
     </section>
   </body>
 </html>
-
