--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
                 <p>
-                  <a href="https://drive.google.com/file/d/1Kjzwj-7o_h4MJq8NJ0u6Khj7uEq8wLXm/view" class="btn btn-primary py-3 px-3">Download Resume</a>
+                  <a href="https://drive.google.com/file/d/17xEC2QhzCQEiK7UZBKDf9ETB2zI8rqEU/view?usp=sharing" class="btn btn-primary py-3 px-3">Download Resume</a>
                 </p>
               </div>
             </div>
@@ -488,4 +488,5 @@
     </section>
   </body>
 </html>
+
 
