--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     </form>
                   </div>
                   <div class="col-md-6 d-flex">
-                    <div class="img" style="background-image: url(images/about.jpeg)"></div>
+                    <div class="img" style="background-image: url(images/New.png)"></div>
                   </div>
                 </div>
               </div>
@@ -488,6 +488,7 @@
     </section>
   </body>
 </html>
+
 
 
 
